--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 miosix/_doc/doxygen/html/*
 miosix/*
 miosix_np_2/*
+report/*
+!report/img/
+!*.tex
+!*.bib
+.vscode/*
 
 # Exclude temporary files
 main.elf
